<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_surface"
    tools:context=".AddItemsFragment">

    <TextView
        android:id="@+id/add_item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Add Item"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/md_theme_primary"
        app:layout_constraintBottom_toBottomOf="@id/bulk_add_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/bulk_add_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bulk_add_button"
        style="@style/Widget.Material3.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="Bulk Add"
        android:textAllCaps="false"
        app:icon="@drawable/ic_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/bulk_add_button"
        app:tabIndicatorColor="@color/md_theme_primary"
        app:tabSelectedTextColor="@color/md_theme_primary"
        app:tabTextColor="@color/md_theme_onSurfaceVariant">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manual" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Scanning" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/manual_add_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/tab_layout">
        <!-- Item Name Field -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_input"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/item_name"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/ic_search">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Quantity Field (Row 2, Left) -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/quantity_input"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="56dp"
            android:hint="@string/qty"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:boxBackgroundMode="outline"
            app:layout_constraintEnd_toStartOf="@+id/category_input"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_input">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/quantity_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Category Field (Row 2, Right) -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/category_input"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/category"
            android:layout_marginTop="8dp"
            android:minHeight="56dp"
            app:boxBackgroundMode="outline"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toEndOf="@id/quantity_input"
            app:layout_constraintTop_toBottomOf="@id/name_input"
            app:startIconDrawable="@drawable/ic_search">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/category_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Checkbox -->
        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/expiry_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/has_expiration_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/quantity_input"
            android:layout_marginTop="8dp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:id="@+id/buy_date_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_weight="1"
            android:hint="@string/buy_date"
            android:layout_marginEnd="8dp"
            app:endIconDrawable="@drawable/ic_calendar"
            app:endIconMode="custom"
            app:boxBackgroundMode="outline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/expiration_date_input"
            app:layout_constraintTop_toBottomOf="@id/expiry_checkbox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/buy_date_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:clickable="true"
                android:cursorVisible="false"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:id="@+id/expiration_date_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_weight="1"
            android:hint="@string/expiration_date"
            app:endIconDrawable="@drawable/ic_calendar"
            app:endIconMode="custom"
            app:boxBackgroundMode="outline"
            app:layout_constraintStart_toEndOf="@id/buy_date_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/expiry_checkbox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/expiration_date_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:clickable="true"
                android:cursorVisible="false"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Buttons Row -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_item_button"
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:icon="@drawable/ic_close"
            app:iconTint="@color/md_theme_onSecondaryContainer"
            app:layout_constraintEnd_toStartOf="@id/save_item_button"
            app:layout_constraintTop_toBottomOf="@id/expiration_date_input" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_item_button"
            style="@style/Widget.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:layout_marginTop="16dp"
            app:icon="@drawable/ic_check"
            app:iconTint="@color/md_theme_onPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/expiration_date_input" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.camera.view.PreviewView
        android:id="@+id/preview_view"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tab_layout" />

    <TextView
        android:id="@+id/scanning_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Align barcode within frame"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/preview_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tab_layout" />

    <nl.dionsegijn.konfetti.xml.KonfettiView
        android:id="@+id/konfetti_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
